# obstination

./: AAAA.bas  Bulletin_Salaire_Calcul.xlsx  CMakeLists.txt  EncodageURL.xlsm  GESTIMMO_ORGANIGRAMME.xlsx  GlobalConst.h  Titre_Sejour_Issaga  Tolookfor.txt  main.cpp
include/: Dossier de compétences.docx  Entretien Annuel RH_SU_Issaga_diallo.docx  Entretien Professionnel RH_SU_Issaga_diallo.docx  GlobalConst.h  Notes_CalculRisqueGlobal_SyntheseParTypeActif.xls  Titre_Sejour_Issaga
include/spdlog/: log.h  logger.h
include/spdlog/details/: format.h
